syntax = "proto3";
import "common.proto";
package msg;

message SignUpResponse
{
	int32 errorCode = 1;
	float version = 2;
}

message TosChat
{
	string name = 1;
	string content = 2;
}

message TocChat
{
	string name = 1;
	string content = 2;
}

message Login
{
	int32 PlayerID = 1;
	string Name = 2;
}

message PlayerBaseInfo
{
	int32 PlayerID = 1;
	string Name = 2;
}

message LoginSuccessfull
{
}

message LoginFaild
{
	msg.RspHead rspHead = 1;
}
